Large smoke simulation sometimes make Blender crash #47189

Closed
opened 2016-01-16 16:44:02 +01:00 by Dylan Brasseur · 12 comments

System Information
Windows 10, i7-4770S, GTX 760

Blender Version
Broken: 2.76b

Short description of error
Blender crashes when atempting to simulate smoke but with no crash report. By launching it with cmd, the type of error i catch is EXCEPTION_ACCESS_VIOLATION

Exact steps for others to reproduce the error
I've tried to reproduce this crash with another scene, but it didn't crash so here is the .blend file that i use :
Based on a (as simple as possible) attached .blend file with minimum amount of steps

**System Information** Windows 10, i7-4770S, GTX 760 **Blender Version** Broken: 2.76b **Short description of error** Blender crashes when atempting to simulate smoke but with no crash report. By launching it with cmd, the type of error i catch is EXCEPTION_ACCESS_VIOLATION **Exact steps for others to reproduce the error** I've tried to reproduce this crash with another scene, but it didn't crash so here is the .blend file that i use : Based on a (as simple as possible) attached .blend file with minimum amount of steps
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Helios77

Added subscriber: @Helios77
Author

Well i miss clicked... so here is the file : http://puu.sh/mxTHW/6c3e9d7cb8.rar (i compressed it to a rar file)
The steps to reproduce the crash :

  • When the scene is loaded, try to play the timeline from 0 in order to bake some smoke (it may directly crash)
  • if it didn't crash, add a smoke flow simulation on the cylinder, with the source being the particle system. Then try to play the timeline from 0 (it crashed every time for me)
Well i miss clicked... so here is the file : http://puu.sh/mxTHW/6c3e9d7cb8.rar (i compressed it to a rar file) The steps to reproduce the crash : - When the scene is loaded, try to play the timeline from 0 in order to bake some smoke (it may directly crash) - if it didn't crash, add a smoke flow simulation on the cylinder, with the source being the particle system. Then try to play the timeline from 0 (it crashed every time for me)

Added subscriber: @mont29

Added subscriber: @mont29

Easy to confirm crash with an asan build here on linux… I think this is a threading issue, crash happens inside Smoke library, it seems to be caused by a growing _totalCells (i.e. resolution) while some threaded sim code still uses old allocated memory… No time to investigate further this evening.

Easy to confirm crash with an asan build here on linux… I think this is a threading issue, crash happens inside Smoke library, it seems to be caused by a growing `_totalCells` (i.e. resolution) while some threaded sim code still uses old allocated memory… No time to investigate further this evening.
Daniel Genrich was assigned by Bastien Montagne 2016-01-16 22:00:15 +01:00

Added subscriber: @genscher

Added subscriber: @genscher

Okay, so in the end it's not related to threading. Issue comes when zres is <3, then some pieces of code generate out-of-bound indices. E.g., in FLUID_3D::setNeumannZ, index + 2 * slabSize goes totally out of bound, since array has only slabSize items.

@genscher will let you handle it from there, I do not understand that code and would probably only do stupid things trying to fix this. ;)

Okay, so in the end it's not related to threading. Issue comes when zres is <3, then some pieces of code generate out-of-bound indices. E.g., in `FLUID_3D::setNeumannZ`, `index + 2 * slabSize` goes totally out of bound, since array has only `slabSize` items. @genscher will let you handle it from there, I do not understand that code and would probably only do stupid things trying to fix this. ;)
Member

Hey,

I can't compile blender at the moment :-(

You need at least 3 (if not 4) res in every direction. I thought min res was already set to 32 or something? I wonder how zres goes below 3. Maybe it's a missing constraint in the "Dynamic" feature, which adaptively changes the domain res.

@ mont29: Nice work for tracing that zres stuff!

Hey, I can't compile blender at the moment :-( You need at least 3 (if not 4) res in every direction. I thought min res was already set to 32 or something? I wonder how zres goes below 3. Maybe it's a missing constraint in the "Dynamic" feature, which adaptively changes the domain res. @ mont29: Nice work for tracing that zres stuff!

Added subscriber: @daniel-34

Added subscriber: @daniel-34

@daniel-34 yes, the smoke domain is very thin in Z dir, guess that's why…

@daniel-34 yes, the smoke domain is very thin in Z dir, guess that's why…

This issue was referenced by 143d423a19

This issue was referenced by 143d423a191a575af76581df6d711c646ec7a4af

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47189
No description provided.